Agregada la funcionalidad de calificar por equipo

--- a/views/actividad/actividad-calificar-equipo.hbs
+++ b/views/actividad/actividad-calificar-equipo.hbs
@@ -1,6 +1,6 @@
 <title>Calificar en equipo - {{actividad.dataValues.nombre}}</title>
 <main class="container">
-    <div class="row m-2 p-3">
+    <div class="row-cols-1 m-2 p-3">
         <h2 class="display-4">Calificar Actividad</h2>
     </div>
     <form action="/actividad/calificar-equipo/{{idgrupo}}/{{idtema}}/{{actividad.dataValues.id}}/{{idequipo}}?_method=PUT" method="POST">
@@ -122,3 +122,4 @@
 
     </script>
 </main>
+
