--- a/views/actividad/actividad-calificar-individual.hbs
+++ b/views/actividad/actividad-calificar-individual.hbs
@@ -1,7 +1,7 @@
 <title>Calificar - {{actividad.dataValues.nombre}}</title>
 
 <div class="container bg-light m-100">
-    <div class="row m-2 p-3">
+    <div class="row-cols-1 m-2 p-3">
         <h2 class="display-4">Calificar Actividad</h2>
     </div>
     <div class="row-cols-1  d-flex flex-row-reverse">
