--- a/views/equipo/vista-grupo-equipo.hbs
+++ b/views/equipo/vista-grupo-equipo.hbs
@@ -86,6 +86,7 @@
                             </table>
                         </div>
                         <div class="row-cols-1">
+                            <h4>Integrantes del equipo</h4>
                             <input type="hidden" id="valorTablaAlumnos" name="valorTablaAlumnos"
                                    value="{{listaFormateadaAlumnos}}">
                             <table id="tableAlumnos" data-toggle="table" data-toolbar="#toolbar"
