--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -39,6 +39,12 @@
         ::-webkit-scrollbar-thumb:hover {
             background: #555;
         }
+
+        @media print {
+            .no-print, .no-print * {
+                display: none !important;
+            }
+        }
     </style>
 
 
@@ -46,15 +52,47 @@
 
 <body>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light no-print">
+
+        <ul class="navbar-nav ">
+            <li class="nav-item">
+                <a class="btn btn-sm bi bi-house-fill" href="/" title="Inicio"></a>
+            </li>
+            <li class="nav-item">
+                <div class="dropdown">
+                    <a class="btn btn-sm bi bi-list" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="/generar-reporte">Generar reporte</a>
+                        <a class="dropdown-item" href="/">Regresar a mi grupos</a>
+                        <a class="dropdown-item" href="#">Salir</a>
+                    </div>
+                </div>
+            </li>
+        </ul>
+
+</nav>
+
 <div class="container-fluid mw-100 mh-100 vh-100 min-vh-100 vw-100 min-vw-100 d-flex flex-column">
-    <header class="navbar navbar-light bg-light sticky-top" id="navbar">
+    <!--
+    <header class="navbar navbar-light bg-light sticky-top no-print" id="navbar">
         <div class="container-fluid">
-            <div class="col">
-                <a class="bi bi-house-fill" href="/" title="Inicio"></a>
+            <a class="bi bi-house-fill" href="/" title="Inicio"></a>
+            <div class="dropdown">
+                <button class="btn btn-secondary btn-sm" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                    <i class="bi bi-list"></i>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
             </div>
 
         </div>
-    </header>
+    </header>-->
     <!--Muestreo del contenido de la aplicación -->
     {{{ body }}}
     <!--Fin de muestreo del contenido de la aplicación -->
