Eliminacion de clase sticky-top en las barras de navegacion, por problemas de visualizacion

--- a/views/alumno/vista-grupo-alumnos.hbs
+++ b/views/alumno/vista-grupo-alumnos.hbs
@@ -1,6 +1,6 @@
 <title>{{asignatura}} {{clave}} - Alumnos - Seguimiento de Estudiantes</title>
 <!-- Barra de navegación -->
-<div class="row container-fluid sticky-top">
+<div class="row container-fluid">
     <ul class=" nav nav-tabs">
         <li class="nav-item">
             <a class="nav-link " aria-current="page" href="/grupo-inicio/{{idgrupo}}"
