--- a/views/calificacion/vista-grupo-calificaciones.hbs
+++ b/views/calificacion/vista-grupo-calificaciones.hbs
@@ -1,7 +1,7 @@
 <title>{{asignatura}} {{clave}} - Calificación - Seguimiento de Estudiantes</title>
 <div class="row container-fluid">
     <!-- Barra de navegación -->
-    <ul class="nav nav-tabs sticky-top">
+    <ul class="nav nav-tabs">
         <li class="nav-item">
             <a class="nav-link " aria-current="page" href="/grupo-inicio/{{idgrupo}}"
                title="Muestra el progreso general del grupo.">Inicio</a>
