--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -1,7 +1,7 @@
 <title>{{grupo.dataValues.asignatura}} {{grupo.dataValues.clave}} - Inicio - Seguimiento de Estudiantes</title>
 <div class="row container-fluid">
     <!-- Barra de navegación -->
-    <ul class="nav nav-tabs sticky-top">
+    <ul class="nav nav-tabs">
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/grupo-inicio/{{grupo.dataValues.id}}"
                title="Muestra el progreso general del grupo.">Inicio</a>
