Unificación de la barra de navegación con la barra del header.

--- a/views/tema/vista-grupo-temas.hbs
+++ b/views/tema/vista-grupo-temas.hbs
@@ -42,7 +42,7 @@
 <div class="row m-2 p-2">
     <!-- Generación de un card por tema -->
     {{#each tema}}
-        <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
+        <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3">
             <div class="card" style="height:14rem;">
                 <div class="card-header d-flex flex-row-reverse">
                     <a class="bi bi-trash-fill " align="right"  data-toggle="modal"
@@ -135,7 +135,7 @@
     {{/each}}
 
     <!-- Card fija para la creación de un grupo -->
-    <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
+    <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3">
         <div class="card" style="height:14rem;">
             <div class="card-body justify-content-center align-center">
                 <div class="row justify-content-center align-items-center">
