--- a/views/alumno/vista-grupo-alumnos.hbs
+++ b/views/alumno/vista-grupo-alumnos.hbs
@@ -1,36 +1,4 @@
 <title>{{asignatura}} {{clave}} - Alumnos - Seguimiento de Estudiantes</title>
-<!-- Barra de navegación -->
-<div class="row container-fluid">
-    <ul class=" nav nav-tabs">
-        <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/grupo-inicio/{{idgrupo}}"
-               title="Muestra el progreso general del grupo.">Inicio</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link active" title="Muestra la lista de alumnos que contiene el grupo."
-               href="/grupo/alumnos/{{idgrupo}}"><i class="bi bi-file-person-fill"></i> Alumnos</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" title="Muestra la lista de temas/unidades que contiene el grupo."
-               href="/grupo/temas/{{idgrupo}}"><i class="bi bi-book-fill"></i> Temas</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link " title="Muestra la lista de actividades por grupo o por tema."
-               href="/grupo/actividades/{{idgrupo}}"><i class="bi bi-bookmark-check-fill"></i>
-                Actividades</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link " title="Muestra las calificaciones almacenadas."
-               href="/grupo/calificaciones/{{idgrupo}}"><i class="bi bi-file-spreadsheet-fill"></i>
-                Calificaciones</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" title="Muestra los equipos existentes."
-               href="/grupo/equipos/{{idgrupo}}"><i class="bi bi-people-fill"></i>
-                Equipos</a>
-        </li>
-    </ul>
-</div>
 <!-- Contenido de la vista -->
 <main class="row m-2 p-2 flex-grow-1 flex-shrink-0">
     <nav id="sideBar" class="col-md-3 col-lg-3 d-md-block bg-light sidebar"
@@ -191,7 +159,7 @@
                             </div>
                             <div class="modal-footer">
                                 <a class="btn btn-secondary" data-dismiss="modal">Cancelar</a>
-                                <button type=submit" class="btn btn-danger">Eliminar</button>
+                                <button type="submit" class="btn btn-danger">Eliminar</button>
                             </div>
                         </div>
                     </div>
