--- a/views/equipo/vista-grupo-equipo.hbs
+++ b/views/equipo/vista-grupo-equipo.hbs
@@ -115,9 +115,9 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h5 class="modal-title" id="eliminarEquipoModalLabel">Eliminar Equipo</h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <a type="button" class="close" data-dismiss="modal" aria-label="Close">
                                             <span aria-hidden="true">&times;</span>
-                                        </button>
+                                        </a>
                                     </div>
                                     <div class="modal-body">
                                         ¿Está seguro que desea eliminar el equipo?
