--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -1,36 +1,4 @@
-<title>{{grupo.dataValues.asignatura}} {{grupo.dataValues.clave}} - Inicio - Seguimiento de Estudiantes</title>
-<div class="row container-fluid">
-    <!-- Barra de navegación -->
-    <ul class="nav nav-tabs">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/grupo-inicio/{{grupo.dataValues.id}}"
-               title="Muestra el progreso general del grupo.">Inicio</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" title="Muestra la lista de alumnos que contiene el grupo."
-               href="/grupo/alumnos/{{grupo.dataValues.id}}"><i class="bi bi-file-person-fill"></i> Alumnos</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" title="Muestra la lista de temas/unidades que contiene el grupo."
-               href="/grupo/temas/{{grupo.dataValues.id}}"><i class="bi bi-book-fill"></i> Temas</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link " title="Muestra la lista de actividades por grupo o por tema."
-               href="/grupo/actividades/{{grupo.dataValues.id}}"><i class="bi bi-bookmark-check-fill"></i>
-                Actividades</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" title="Muestra las calificaciones almacenadas."
-               href="/grupo/calificaciones/{{grupo.dataValues.id}}"><i class="bi bi-file-spreadsheet-fill"></i>
-                Calificaciones</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" title="Muestra los equipos existentes."
-               href="/grupo/equipos/{{grupo.dataValues.id}}"><i class="bi bi-people-fill"></i>
-                Equipos</a>
-        </li>
-    </ul>
-</div>
+<title>{{asignatura}} {{clave}} - Inicio - Seguimiento de Estudiantes</title>
 <div class="row m-2 p-2 flex-grow-1 flex-shrink-0">
     <nav id="sideBar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar navbar-nav-scroll">
         <div class="sidebar-sticky">
@@ -39,9 +7,10 @@
             <ul class="nav flex-column">
                 {{#each temas}}
                     <li class="nav-item"><a class="nav-link"
-                                            href="/grupo-inicio/{{../grupo.dataValues.id}}/{{dataValues.id}}"><i
+                                            href="/grupo-inicio/{{../idgrupo}}/{{dataValues.id}}"><i
                             class="bi-book-half"></i><strong> {{dataValues.nombre}}</strong></a></li>
                 {{/each}}
+                <li class="nav-item"><a class="nav-link" href="#"><i class="bi-book-half"></i><strong> Todos</strong></a></li>
             </ul>
         </div>
     </nav>
@@ -49,23 +18,23 @@
     <main class="col col-md col-xl col-sm col-lg">
         <h3>Tema: {{tema.dataValues.nombre}}</h3>
         <div class="row">
-            <div class="col-3 col-md-4 col-xl-2 col-sm-3 col-lg-2">
-                <div class="card" style="width: 16rem;height: 385px">
+            <div class="col-4 col-md-5 col-xl-3 col-sm-4 col-lg-3">
+                <div class="card" style="width: 100%;height: 385px">
                     <input type="hidden" id="indiceReprobacionData" value="{{dataReprobacion}}">
                     <div class="card-body">
-                        <h4 class="card-title text-center">Indice de reprobación</h4>
-                        <div id="indiceReprobacion" style="height: 250px;"></div>
-                        <div class="card-text">Alumnos Aprobados: {{aprobados}}</div>
-                        <div class="card-text">Alumnos Reprobados: {{reprobados}}</div>
+                        <h5 class="card-title text-center">Indice de reprobación grupal</h5>
+                        <div id="indiceReprobacion" style="width: 100%; height: 250px;"></div>
+                        <div class="card-text">Alumnos Aprobados: {{aprobados}} <br> Alumnos Reprobados: {{reprobados}}</div>
+
                     </div>
                 </div>
             </div>
             <div class="col col-md col-xl col-sm col-lg">
-                <div class="card " style="width: 50rem; height: 385px">
+                <div class="card " style="width: 90%; height: 385px">
                     <input type="hidden" id="actividadesReprobacionData" value="{{dataReprobacionAct}}">
                     <div class="card-body">
-                        <h4 class="card-title text-center">Indice de reprobación por actividad</h4>
-                        <div id="actividadesAprobacion" style="height: 250px;"></div>
+                        <h5 class="card-title text-center">Rendimiento del grupo por actividad</h5>
+                        <div id="actividadesAprobacion" style="width: 100%; height: 250px;"></div>
                     </div>
                 </div>
             </div>
