Unificación de la barra de navegación con la barra del header.

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -52,7 +52,7 @@
 
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light no-print">
+<header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar bg-dark no-print container-fluid sticky-top">
 
         <ul class="navbar-nav ">
             <li class="nav-item">
