--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -16,7 +16,11 @@
     </nav>
 
     <main class="col col-md col-xl col-sm col-lg">
-        <h3>Tema: {{tema.dataValues.nombre}}</h3>
+        <div class="row">
+            <div class="col">
+                <h3>Tema: {{tema.dataValues.nombre}}</h3>
+            </div>
+        </div>
         <div class="row">
             <div class="col-4 col-md-5 col-xl-3 col-sm-4 col-lg-3">
                 <div class="card" style="width: 100%;height: 385px">
