--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="/css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/css/bootstrap-icons.css" rel="stylesheet" type="text/css">
     <link href="/css/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="/js/bootstrap4-editable/css/bootstrap-editable.css" type="text/css">
@@ -54,49 +54,110 @@
 
 <header class="navbar navbar-expand navbar-dark flex-column flex-md-row bd-navbar bg-dark no-print container-fluid sticky-top">
 
-        <ul class="navbar-nav ">
-            <li class="nav-item">
-                <a class="btn btn-sm bi bi-house-fill" href="/" title="Inicio"></a>
-            </li>
-            <li class="nav-item">
-                <div class="dropdown">
-                    <a class="btn btn-sm bi bi-list" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="/generar-reporte">Generar reporte</a>
-                        <a class="dropdown-item" href="/">Regresar a mi grupos</a>
-                        <a class="dropdown-item" href="#">Salir</a>
-                    </div>
-                </div>
-            </li>
-        </ul>
+    <ul class="navbar-nav m-2">
 
-</nav>
-
-<div class="container-fluid mw-100 mh-100 vh-100 min-vh-100 vw-100 min-vw-100 d-flex flex-column">
-    <!--
-    <header class="navbar navbar-light bg-light sticky-top no-print" id="navbar">
-        <div class="container-fluid">
-            <a class="bi bi-house-fill" href="/" title="Inicio"></a>
+        <li class="nav-item">
+            <a class="nav-link bi bi-house-fill" href="/" title="Inicio"></a>
+        </li>
+        <li class="nav-item">
             <div class="dropdown">
-                <button class="btn btn-secondary btn-sm" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                    <i class="bi bi-list"></i>
-                </button>
+                <a class="nav-link bi bi-list" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false"> Archivo
+                </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="/generar-reporte">Generar reporte parcial</a>
+                    <a class="dropdown-item" href="/">Regresar a mi grupos</a>
+                    <a class="dropdown-item" href="#">Salir</a>
                 </div>
             </div>
+        </li>
+        {{#iflogico menu '===' 0}}
+            <!-- Menú de la pantalla de mis grupos-->
+            <li class="nav-item">
+                <a class="nav-link {{#iflogico estado '===' "3"}} active {{/iflogico}}"
+                   title="Muestra todos los grupos independientemente del estado." href="/">Todos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {{#iflogico estado '===' "1"}} active {{/iflogico}}" href="/filtro/1"
+                   title="Muestra únicamente los grupos con estado activo.">Activos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {{#iflogico estado '===' "0"}} active {{/iflogico}}" href="/filtro/0"
+                   title="Muestra únicamente los grupos con estado inactivo.">Completados</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {{#iflogico estado '===' "2"}} active {{/iflogico}}" href="/filtro/2"
+                   title="Muestra los grupos enviados a la papelera de reciclaje."><i
+                        class="bi bi-trash2-fill"></i></a>
+            </li>
+            <li class="nav-item">
+                <a type="button" class="nav-link bi bi-gear-fill" data-toggle="modal" data-target="#configuracionModal"
+                   title="Configuración"></a>
+            </li>
+        {{/iflogico}}
+        {{#iflogico menu '===' 1}}
+            <!-- Menú de la navegación del grupo-->
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/grupo-inicio/{{idgrupo}}"
+                   title="Muestra el progreso general del grupo.">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" title="Muestra la lista de alumnos que contiene el grupo."
+                   href="/grupo/alumnos/{{idgrupo}}"><i class="bi bi-file-person-fill"></i> Alumnos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" title="Muestra la lista de temas/unidades que contiene el grupo."
+                   href="/grupo/temas/{{idgrupo}}"><i class="bi bi-book-fill"></i> Temas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " title="Muestra la lista de actividades por grupo o por tema."
+                   href="/grupo/actividades/{{idgrupo}}"><i class="bi bi-bookmark-check-fill"></i>
+                    Actividades</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" title="Muestra las calificaciones almacenadas."
+                   href="/grupo/calificaciones/{{idgrupo}}"><i class="bi bi-file-spreadsheet-fill"></i>
+                    Calificaciones</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" title="Muestra los equipos existentes."
+                   href="/grupo/equipos/{{idgrupo}}"><i class="bi bi-people-fill"></i>
+                    Equipos</a>
+            </li>
+        {{/iflogico}}
 
-        </div>
-    </header>-->
-    <!--Muestreo del contenido de la aplicación -->
+    </ul>
+    <ul class="navbar-nav  ml-md-auto" >
+
+        {{#iflogico visualizacion '===' 0}}
+            <li class="nav-item">
+                <a class="navbar-text">Vista:</a>
+            </li>
+            <li class="nav-item" >
+                <a class="nav-link" href="/grupo-inicio/{{idgrupo}}" title="Genera la visualización de datos del grupo."
+                   aria-current="page">General</a>
+
+            </li>
+            <li class="nav-item" >
+                <a class="nav-link" href="/grupo-inicio/alumnos/{{idgrupo}}/{{tema.dataValues.id}}"
+                   title="Genera la visualización de los datos de un alumno.">Individual</a>
+
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/grupo-inicio/equipos/{{idgrupo}}/{{tema.dataValues.id}}"
+                   title="Genera la visualización de los datos agrupado por equipos.">Equipo</a>
+            </li>
+        {{/iflogico}}
+
+    </ul>
+
+</header>
+
+<main class="container-fluid mw-100 mh-100 vh-100 min-vh-100 vw-100 min-vw-100 d-flex flex-column m-2 p-2">
+
     {{{ body }}}
-    <!--Fin de muestreo del contenido de la aplicación -->
-</div>
+
+</main>
 
 </body>
 </html>
