--- a/views/grupo/inicio-wizard.hbs
+++ b/views/grupo/inicio-wizard.hbs
@@ -9,7 +9,7 @@
 
 <title>Nuevo grupo- Seguimiento de Estudiantes</title>
 
-<div class="container p-5 bg-light h-100">
+<div class="container p-5 h-100">
 
     <div class="row">
 
