Mejora en la vista del modal configuracion, añadida configuracion para la creacion de equipos

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -215,12 +215,12 @@
                             </div>
 
                             <div class="row p-2">
-                                <h4>Cálculo de calificaciones</h4>
+                                <h4>Configuraciones</h4>
                             </div>
                             <div class="row">
                                 <div class="dropdown-divider"></div>
                             </div>
-                            <h5>Calificación individual</h5>
+                            <h5>Cálculo de calificaciones</h5>
                             <div class="input-group" name="calfi" value="{{config.califi}}">
                                 <div class="row m-1">
                                     <div class="form-check">
@@ -242,7 +242,7 @@
                                 </div>
                             </div>
 
-                            <h5>Calificación por equipo</h5>
+                            <h5>Formación de equipos</h5>
                             <div class="row m-1">
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" value=0 id="calfe1"
