cambio de labels en graficas

--- a/views/grupo/vista-inicio-grupo-seleccion.hbs
+++ b/views/grupo/vista-inicio-grupo-seleccion.hbs
@@ -87,7 +87,7 @@
                             Actividades aprobadas: {{actAprobadas}}
                         </p>
                         <p>
-                            Actividades reprobadas: {{actReprobadas}}
+                            Actividades no aprobadas: {{actReprobadas}}
                         </p>
                 </div>
                 <div class="col col-md col-xl col-sm col-lg graph-container">
