añadidos estilos css a la vista previa de reporte

--- a/views/reporte/vista-previa-reporte-desercion.hbs
+++ b/views/reporte/vista-previa-reporte-desercion.hbs
@@ -37,10 +37,10 @@
     <div class="row m-2 p-2 -align-justify regular">
         <p>{{mensaje}}</p>
     </div>
-    <div class="row-cols-1 m-2 p-2">
+    <div class="row-cols-1 m-2 p-2 regular">
         <h5>Índice de reprobación</h5>
     </div>
-    <div class="row-cols-1">
+    <div class="row-cols-1" style="font-family: 'Montserrat'; font-size: 10pt">
         <div class="col-auto navbar-nav-scroll">
             <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
             <table id="table" data-toggle="table" data-click-to-select="true" name="table">
