--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -28,7 +28,7 @@
                     <div class="card-body">
                         <h5 class="card-title text-center">Indice de reprobación grupal</h5>
                         <div id="indiceReprobacion" style="width: 100%; height: 250px;"></div>
-                        <div class="card-text">Alumnos Aprobados: {{aprobados}} <br> Alumnos Reprobados: {{reprobados}}</div>
+                        <div class="card-text">Alumnos Aprobados: {{aprobados}} <br> Alumnos no aprobados: {{reprobados}}</div>
 
                     </div>
                 </div>
@@ -64,7 +64,7 @@
         data: JSON.parse(dataReprobacionAct),
         xkey:'label',
         ykeys:['a','b'],
-        labels: ['Reprobados', 'Aprobados'],
+        labels: ['No aprobadas', 'Aprobados'],
         resize: true
     })
 </script>
