--- a/views/reporte/vista-previa-reporte-desercion.hbs
+++ b/views/reporte/vista-previa-reporte-desercion.hbs
@@ -32,17 +32,24 @@
     }
 
 </style>
-
-<header class="container d-print-">
-    <figure class="row-cols-1 d-flex align-items-center">
-        <img style="width: auto; height: 100%;" src="/img/Encabezado.png" alt="Encabezado">
-    </figure>
-</header>
-<main class="container d-print- ">
-    <div class="row m-2 p-2 flex-row-reverse regular">
-        <p style="background-color: black; color: white;"> {{fecha}}</p>
-        <p>Irapuato, Gto. </p>
-    </div>
+<div id="page-container">
+    <div id="content-wrap">
+        <header class="container d-print-">
+            <div class="row">
+                <figure class="col-10">
+                    <img style="width: 100%; height: auto;" src="/img/encabezado-left.png" alt="Encabezado">
+                </figure>
+                <figure class="col">
+                    <img style="width: 120%; height: auto;" src="/img/encabezado-right.png" alt="Encabezado">
+                </figure>
+            </div>
+            </figure>
+        </header>
+        <main class="container d-print-">
+            <div class="row m-2 p-2 flex-row-reverse regular">
+                <p style="background-color: black; color: white;"> {{fecha}} </p>
+                <p> Irapuato, Gto. </p>
+            </div>
 
             <div class="row m-2 p-2 extra-bold" style="text-transform: uppercase">
                 {{coordinadorNombre}}<br>
@@ -79,14 +86,39 @@
                 </div>
             </div>
 
-    <div class="row-cols-1 m-2 p-2 montserrat" ">
+            <div class="row-cols-1 m-2 p-2 montserrat">
 
             </div>
 
-    <div class="row-cols-1 m-2 p-2">
-        <button id='current' class="btn btn-primary no-print" onclick="print_current_page()">Imprimir</button>
+            <div class="row-cols-1 m-2 p-2">
+                <button id='current' class="btn btn-primary no-print" onclick="print_current_page()">Imprimir</button>
+                <a class="btn btn-secondary no-print" href="/">Salir</a>
+            </div>
+        </main>
     </div>
-</main>
+    <footer class="container d-print-" id="footer">
+        <div class="row">
+            <figure class="col">
+                <img src="/img/footer-left.png" style="height: 40%; width: auto">
+            </figure>
+            <div class="col montserrat" style="font-size: 8pt">
+                <br>
+                <br>
+                <br>
+                Carr. Irapuato – Silao km 12.5 Colonia El Copal,<br>
+                Irapuato, Guanajuato<br>
+                C.P. 36821 Tels. 462 6967900 y 6067602<br>
+                <div class="extra-bold"> tecnm.mx | irapuato.tecnm.mx</div>
+                <br>
+            </div>
+            <figure class="col flex-row-reverse" style="height: 105%; width: auto">
+                <img src="/img/footer-right.png">
+            </figure>
+        </div>
+
+    </footer>
+</div>
+
 
 <script src="/js/llenar-tabla-helper.js" type="text/javascript"></script>
 
